# scrawl

./: .gitignore  Cargo.toml  README.md  README_en.md  README_zh.md  debug_font.py  demo.py  demo_v2.py  demo_witch_v2.py  demogui.py  demomaliang.py  demotkgui.py  pyproject.toml  reproduce_issue.py  requirements.txt  setup.py  test_v2.py
.github/workflows/: python-publish.yml
crates/scrawl-animation/: Cargo.toml
crates/scrawl-animation/src/: lib.rs  spritesheet.rs  tween.rs
crates/scrawl-app/: Cargo.toml
crates/scrawl-app/src/: bench_bare.rs  main.rs
crates/scrawl-audio/: Cargo.toml
crates/scrawl-audio/src/: bus.rs  lib.rs
crates/scrawl-bridge/: Cargo.toml
crates/scrawl-bridge/src/: lib.rs  py_game.rs  py_scene.rs  py_sprite.rs  runtime.rs
crates/scrawl-core/: Cargo.toml
crates/scrawl-core/src/: collision.rs  components.rs  events.rs  input.rs  lib.rs  resources.rs  scene.rs  schedule.rs
crates/scrawl-editor-protocol/: Cargo.toml
crates/scrawl-editor-protocol/src/: lib.rs
crates/scrawl-editor-server/: Cargo.toml
crates/scrawl-editor-server/src/: lib.rs
crates/scrawl-navigation/: Cargo.toml
crates/scrawl-navigation/src/: lib.rs
crates/scrawl-particles/: Cargo.toml
crates/scrawl-particles/src/: lib.rs
crates/scrawl-physics/: Cargo.toml
crates/scrawl-physics/src/: lib.rs  sync.rs
crates/scrawl-render/: Cargo.toml
crates/scrawl-render/src/: camera.rs  collision_debug.rs  fps_overlay.rs  lib.rs  mask_gen.rs  pen.rs  sprite_render.rs  svg_loader.rs
crates/scrawl-scripting/: Cargo.toml
crates/scrawl-scripting/src/: context.rs  coroutine.rs  lib.rs  python_host.rs  rust_scripts.rs  traits.rs
crates/scrawl-tilemap/: Cargo.toml
crates/scrawl-tilemap/src/: lib.rs
crates/scrawl-ui/: Cargo.toml
crates/scrawl-ui/src/: lib.rs
demo/: 1.scrawl  11.scrawl  demo.py  democat.py  demogui.py  demomaliang.py  demotkgui.py  demowitch.py
demo/pygameGUI/: 检测2 - 输入框窗口.py  检测6 - 动画button.py
demo/scrawl_ide/: byai.scrawl  test1.scrawl
demo_project/scrawl_demo_flappybird-main/: Flappybird.py  README.md
demo_project/scrawl_demo_witch-main-main/: README.md  demo.py
demo_v2/: demo_witch_v2.py
docs/: MANUAL.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.0.5.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.1.1.md  RELEASE_NOTES_2.1.2.md  SCRAWL_V2_UNIMPLEMENTED.md
python/scrawl/: __init__.py
python/scrawl_v2/: __init__.py  animation.py  audio.py  camera.py  compat.py  constants.py  engine.py  events.py  input_map.py  light2d.py  math_utils.py  navigation.py  node.py  particles.py  path2d.py  physics.py  resources.py  scene.py  signals.py  sprite.py  state_machine.py  tilemap.py  timer.py  ui.py
scrawl/: __init__.py  engine.py  heat2d.py  input_method_manager.py  scrawl.py  tools.py  wasabi2d.py
scrawl/pygameGUI/: __init__.py  error.py  group.py
scrawl/pygameGUI/composites/: entry.py  scrollbar.py  window.py
scrawl/pygameGUI/effects/: player.py
scrawl/pygameGUI/widgets/: button.py  frame.py  label.py  message.py  slider.py  switch.py  widget.py
scrawl_ide/: main.py  requirements.txt
scrawl_ide/core/: __init__.py  ai_service.py  application.py  i18n.py  main_window.py  project.py  settings.py  settings_dialog.py
scrawl_ide/models/: __init__.py  project_model.py  scene_model.py  sprite_model.py
scrawl_ide/panels/: __init__.py  ai_chat.py  welcome_page.py
scrawl_ide/panels/asset_browser/: __init__.py  asset_preview.py  asset_tree.py
scrawl_ide/panels/code_editor/: __init__.py  editor_widget.py  python_lexer.py  snippets.py
scrawl_ide/panels/inspector/: __init__.py  code_costume_dialog.py  navigation_editor.py  path_editor.py  property_editor.py  spriteframes_editor.py  tilemap_editor.py
scrawl_ide/panels/scene_editor/: __init__.py  scene_items.py  scene_toolbar.py  scene_view.py
scrawl_ide/panels/scene_tree/: __init__.py  hierarchy_view.py
scrawl_ide/resources/default_project/: project.scrawl
scrawl_ide/resources/default_project/scripts/: main.py
scrawl_ide/resources/styles/: dark_theme.qss
scrawl_ide/runner/: __init__.py  code_generator.py  game_runner.py
