[workspace]
resolver = "2"
members = [
    "crates/scrawl-core",
    "crates/scrawl-render",
    "crates/scrawl-physics",
    "crates/scrawl-animation",
    "crates/scrawl-tilemap",
    "crates/scrawl-particles",
    "crates/scrawl-audio",
    "crates/scrawl-navigation",
    "crates/scrawl-ui",
    "crates/scrawl-scripting",
    "crates/scrawl-bridge",
    "crates/scrawl-editor-protocol",
    "crates/scrawl-editor-server",
    "crates/scrawl-app",
]

[workspace.package]
version = "2.1.2"
edition = "2021"
license = "MIT"
authors = ["Streetartist"]
repository = "https://github.com/nicopyright/scrawl"

[workspace.dependencies]
# Bevy engine
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_state",
    "bevy_dev_tools",
    "default_font",
    "png",
    "x11",
    "wayland",
] }

# Physics
bevy_rapier2d = "0.28"

# Audio
bevy_kira_audio = "0.21"

# Particles
bevy_hanabi = "0.14"

# Tilemap
bevy_ecs_tilemap = "0.15"

# Python binding
pyo3 = { version = "0.23", features = ["auto-initialize", "extension-module", "generate-import-lib"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# SVG rendering
resvg = "0.44"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
notify = "7.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Internal crates
scrawl-core = { path = "crates/scrawl-core" }
scrawl-render = { path = "crates/scrawl-render" }
scrawl-physics = { path = "crates/scrawl-physics" }
scrawl-animation = { path = "crates/scrawl-animation" }
scrawl-tilemap = { path = "crates/scrawl-tilemap" }
scrawl-particles = { path = "crates/scrawl-particles" }
scrawl-audio = { path = "crates/scrawl-audio" }
scrawl-navigation = { path = "crates/scrawl-navigation" }
scrawl-ui = { path = "crates/scrawl-ui" }
scrawl-scripting = { path = "crates/scrawl-scripting" }
scrawl-bridge = { path = "crates/scrawl-bridge" }
scrawl-editor-protocol = { path = "crates/scrawl-editor-protocol" }
scrawl-editor-server = { path = "crates/scrawl-editor-server" }
