[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scrawl-engine"
version = "2.1.2"
description = "A simple yet powerful 2D game engine built on Bevy"
authors = [{name = "Streetartist"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.maturin]
manifest-path = "crates/scrawl-bridge/Cargo.toml"
python-source = "python"
python-packages = ["scrawl", "scrawl_v2"]
module-name = "scrawl.scrawl_native"
include = [{ path = "LICENSE", format = "sdist" }]
