[package]
name = "scrawl-scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Script hosting for Python and Rust game scripts in the Scrawl engine"

[dependencies]
bevy = { workspace = true }
scrawl-core = { workspace = true }
pyo3 = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
